# captain

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.release  Makefile  README.md  build.py  mkosi.conf  mkosi.finalize  mkosi.postinst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
captain/: __init__.py  artifacts.py  buildah.py  config.py  docker.py  iso.py  kernel.py  qemu.py  skopeo.py  tools.py  util.py
captain/cli/: __init__.py  _commands.py  _main.py  _parser.py  _release.py  _stages.py
captain/oci/: _build.py  _common.py  _publish.py  _pull.py
docs/: kernel-build.md
