[project]
version = "0.0.1"
name = "captain"
requires-python = ">=3.13"
dependencies = ["configargparse>=1.7", "rich>=14.3.3"]

[project.optional-dependencies]
dev = ["ruff>=0.9", "pyright>=1.1"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"captain/iso.py" = ["E501"]  # embedded grub config has long data lines

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
exclude = ["mkosi.tools", "mkosi.output", "__pycache__"]
include = ["captain", "build.py"]
